--- a/css/custom.css
+++ b/css/custom.css
@@ -5,7 +5,7 @@
  */
 
 body, section {			/* Change width and height to own preferences */
-	width: 500px;
+	width: 450px;
 	height: 400px;
 	overflow-x: hidden;
 }
@@ -18,3 +18,8 @@ section { padding: 5px;}
 ::-webkit-scrollbar { width: 6px; }
 ::-webkit-scrollbar-track { -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); }
 ::-webkit-scrollbar-thumb, ::-webkit-scrollbar-thumb:window-inactive  { background: red; }
+
+/* Button */
+.btn-circle {
+  border-radius: 100px;
+}
